--- a/taskFive/style.css
+++ b/taskFive/style.css
@@ -114,10 +114,23 @@ aside h1{
   border:none;
 }
 footer{
+  width:100%;
   height:60px;
   font-size: 12px;
   color:#fff;
   background: #000;
   padding-top:30px;
   text-align: center;
+}
+.clearfix:after{
+  clear:both;
+  content: '';
+  display: block;
+}
+.left-box{
+  float: left;
+}
+.right-box{
+  float: right;
+  width:400px;
 }
